core/rbc-api/overlays/production/patches/deployment.rmv-debug.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbc-rbc-api
spec:
  template:
    spec:
      containers:
      - name: rbc-api
