core/rbc-api/overlays/production/patches/ingress.add-tls.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbc-rbc-api
spec:
  rules:
  - host: api.curiouscommunities.net
    http:
      paths:
      - backend:
          service:
            name: rbc-rbc-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
  tls:
  - hosts:
    - api.curiouscommunities.net
    secretName: letsencrypt-rbc-secret
